# PythonCallbacksWin64Bug

./: .gitignore  CMakeLists.txt  LICENSE  README.md  callback_consumer.cpp  callback_consumer.h  callback_consumer.py  test_callback_consumer.cpp  test_callback_consumer.py
scripts/: build.py
